--- a/server/package.json
+++ b/server/package.json
@@ -15,15 +15,15 @@
     "@types/express": "^4.0.37",
     "body-parser": "^1.18.2",
     "express": "^4.15.4",
-    "request": "^2.34",
-    "nodemailer": "^6.1.1"
+    "nodemailer": "^6.1.1",
+    "request": "0.0.1"
   },
   "devDependencies": {
     "@types/jasmine": "^2.8.9",
     "@types/request-promise": "^4.1.38",
     "jasmine": "^2.8.0",
     "jasmine-promises": "^0.4.1",
-    "request-promise": "^4.2.2",
+    "request-promise": "^0.0.1",
     "typescript": "^3.3.3333"
   }
 }
